Closed
Bug 1182610
Opened 10 years ago
Closed 10 years ago
crash in mozilla::OriginAttributes::CreateSuffix(nsACString_internal&)
Categories
(Core :: Security: CAPS, defect)
Tracking
()
RESOLVED
FIXED
mozilla42
| Tracking | Status | |
|---|---|---|
| firefox40 | --- | unaffected |
| firefox41 | --- | fixed |
| firefox42 | --- | fixed |
People
(Reporter: away, Assigned: bholley)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
2.48 KB,
patch
|
gkrizsanits
:
review+
ritu
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-fabb0e9f-0d96-4be4-8538-571e52150708.
=============================================================
Somewhat-high crash on aurora 41. Filing this as separate from bug 1171432 because I don't see ServiceWorkers on the stack. Most of the URLs are local files.
MOZ_RELEASE_ASSERT(mAppId != nsIScriptSecurityManager::UNKNOWN_APP_ID);
00 00192a18 6adb6c1d xul!mozilla::OriginAttributes::CreateSuffix+0x58
01 00192a84 6a89e901 xul!mozilla::BasePrincipal::GetOrigin+0x3b
02 00192a98 6a6f83dd xul!NS_InvokeByIndex+0x27
03 00192fe4 6a327cd7 xul!XPC_WN_GetterSetter+0x80d
04 0019330c 6a2fe97c xul!js::Invoke+0x137
05 001933c0 6a3064c6 xul!js::Invoke+0x1cc
06 001936fc 6a3296dd xul!js::GetProperty+0x636
07 00193768 6a32f695 xul!GetPropertyOperation+0x11d
Flags: needinfo?(bobbyholley)
| Assignee | ||
Comment 1•10 years ago
|
||
Yeah, my bad.
Assignee: nobody → bobbyholley
Flags: needinfo?(bobbyholley)
| Assignee | ||
Comment 2•10 years ago
|
||
Attachment #8634404 -
Flags: review?(gkrizsanits)
Updated•10 years ago
|
Attachment #8634404 -
Flags: review?(gkrizsanits) → review+
| Assignee | ||
Comment 4•10 years ago
|
||
Comment on attachment 8634404 [details] [diff] [review]
Check for UNKNOWN_APP_ID in nsIPrincipal::GetOrigin. v1
Approval Request Comment
[Feature/regressing bug #]: bug 1165162
[User impact if declined]: crashes
[Describe test coverage new/current, TreeHerder]: tests with patch
[Risks and why]: very low risk
[String/UUID change made/needed]: None
Attachment #8634404 -
Flags: approval-mozilla-aurora?
> [Describe test coverage new/current, TreeHerder]: tests with patch
Always good to see, thanks!
Comment on attachment 8634404 [details] [diff] [review]
Check for UNKNOWN_APP_ID in nsIPrincipal::GetOrigin. v1
Patch with crash-test. Approved.
Attachment #8634404 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 7•10 years ago
|
||
Flags: in-testsuite+
Comment 8•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
There's still a small handful of these on 41b9, but they get up-weighted by our scoring system for being repeated startup crashes.
Bobby, does anything stand out here? I don't have the mAppId available, unfortunately:
https://crash-stats.mozilla.com/report/index/5dff0416-f9bc-49c2-9280-8984d2150912
https://crash-stats.mozilla.com/report/index/96375197-b0be-49f4-bff9-d28222150912
Flags: needinfo?(bobbyholley)
| Assignee | ||
Comment 10•10 years ago
|
||
Thanks for raising that dmajor - filed bug 1205456.
Flags: needinfo?(bobbyholley)
You need to log in
before you can comment on or make changes to this bug.
Description
•